# Nanopore-Compression-Benchmarks

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerignore  LICENSE.md  README.md
data/pod5/: download_dataset.py
data/pod5/file_lists/: DS1.txt  DS2.txt  DS3.txt  DS4.txt  DS5.txt
docs/: benchmark_binaries_compilation.md  datasets.md  replicating-paper-results.md  running-benchmarks.md
notebooks/: example_full_pipeline_tutorial.ipynb  replicate_article_figures_and_tables.ipynb
pre-compiled-bins/linux-x86_64/compression_benchmark/lib/: libabsl_str_format_internal.so.2103.0.1  libabsl_time.so.2103.0.1  libabsl_time_zone.so.2103.0.1  libaws-c-common.so.1  libaws-c-event-stream.so.1.0.0  libbrotlicommon.so.1  libgssapi_krb5.so.2  libkeyutils.so.1  libnghttp2.so.14  libutf8proc.so.2  libz.so.1  libzstd.so.1
pre-compiled-bins/linux-x86_64/speed_benchmark/lib/: libabsl_raw_logging_internal.so.2103.0.1  libabsl_strings_internal.so.2103.0.1  libaws-c-io.so.1.0.0  libbrotlidec.so.1  libcrypto.so.1.1  libcurl.so.4  libgoogle_cloud_cpp_storage.so.1  libre2.so.9  libsnappy.so.1  libssh2.so.1
pre-compiled-bins/linux-x86_64/time_split_benchmark/lib/: libabsl_base.so.2103.0.1  libabsl_int128.so.2103.0.1  libabsl_spinlock_wait.so.2103.0.1  libabsl_strings.so.2103.0.1  libaws-c-cal.so.1.0.0  libaws-checksums.so.1.0.0  libboost_filesystem.so.1.73.0  libbrotlienc.so.1  libbz2.so.1.0  libcom_err.so.3  libcrc32c.so.1  libgcc_s.so.1  libgoogle_cloud_cpp_common.so.1  libk5crypto.so.3  libkrb5.so.3  libkrb5support.so.0  liblz4.so.1  libprotobuf.so.31
results/article/: README.md
results/article/compression/20260430T202949_VBZ-EX-ZD-ZSTD-PDZ_full_DS1/: run_manifest.json
results/article/compression/20260430T204946_VBZ-EX-ZD-ZSTD-PDZ_full_DS2/: run_manifest.json
results/article/compression/20260430T210335_VBZ-EX-ZD-ZSTD-PDZ_full_DS3/: run_manifest.json
results/article/compression/20260430T212502_VBZ-EX-ZD-ZSTD-PDZ_full_DS4/: run_manifest.json
results/article/compression/20260430T213949_VBZ-EX-ZD-ZSTD-PDZ_full_DS5/: run_manifest.json
results/article/compression/20260430T215044_VBZ-EX-ZD-ZSTD-PDZ_full_DS6/: run_manifest.json
results/article/compression/20260430T221118_VBZ-EX-ZD-ZSTD-PDZ_full_DS7/: run_manifest.json
results/article/compression/20260430T221836_VBZ-EX-ZD-ZSTD-PDZ_full_DS8/: run_manifest.json
results/article/compression/20260430T221947_VBZ-EX-ZD-ZSTD-PDZ_full_DS9/: run_manifest.json
scripts/benchmarks/: run_compression_benchmark.py  run_memory_benchmark.py  run_size_split_benchmark.py  run_speed_benchmark.py  run_time_split_benchmark.py
scripts/benchmarks/analysis/: __init__.py  compression.py  figures.py  memory.py  shared.py  speed.py  splits.py
scripts/benchmarks/common/: __init__.py  algorithms.py  cli.py  executables.py  execution.py  inputs.py  runs.py  summaries.py
scripts/ci/release/: linux-x86_64.Dockerfile  linux-x86_64.conda-env.yaml  make-release-worker.sh  make-release.sh
scripts/utils/: blow5_to_pod5.py  build_computational_efficiency_datasets.py  pod5_to_benchmark_time.py  process_files_for_time_benchmark.py  summarize_pod5_datasets.py
src/: CMakeLists.txt
src/cmake/: FindArrow.cmake  FindFlatbuffers.cmake  Findzstd.cmake
src/common/: CMakeLists.txt  compression_algorithm_parser.cpp  compression_algorithm_parser.hpp  compression_algorithms.hpp  error_monad.hpp  params.hpp  params_parser.hpp
src/compression_benchmark/: CMakeLists.txt  compression_benchmark.cpp  streamed_dataset.cpp  streamed_dataset.hpp
src/libs/: CMakeLists.txt  benchmark_codecs.cpp  benchmark_codecs.hpp  exzd_codec.cpp  exzd_codec.hpp
src/speed_benchmark/: CMakeLists.txt  full_dataset.hpp  speed_benchmark.cpp
src/time_split_benchmark/: CMakeLists.txt  time_split_benchmark.cpp
(+83 files in other folders)
